Make changes to connection string.